--- a/train.ipynb
+++ b/train.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
    "source": [
     "import numpy as np\n",
     "from sklearn.datasets import fetch_20newsgroups\n",
@@ -14,13 +12,21 @@
     "y_train = newsgroups_train.target\n",
     "targets = newsgroups_train.target_names\n",
     "print(targets)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['alt.atheism', 'comp.graphics', 'comp.os.ms-windows.misc', 'comp.sys.ibm.pc.hardware', 'comp.sys.mac.hardware', 'comp.windows.x', 'misc.forsale', 'rec.autos', 'rec.motorcycles', 'rec.sport.baseball', 'rec.sport.hockey', 'sci.crypt', 'sci.electronics', 'sci.med', 'sci.space', 'soc.religion.christian', 'talk.politics.guns', 'talk.politics.mideast', 'talk.politics.misc', 'talk.religion.misc']\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -35,13 +41,43 @@
     "clf = LogisticRegression(C=1000, multi_class=\"auto\")\n",
     "pipeline = make_pipeline(vectorizer, clf)\n",
     "pipeline.fit(X_train, y_train)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/Users/skasmani/opt/anaconda3/envs/AI_ML_38_GPU/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('tfidfvectorizer',\n",
+       "                 TfidfVectorizer(min_df=3, ngram_range=(1, 2), smooth_idf=1,\n",
+       "                                 stop_words='english', strip_accents='unicode',\n",
+       "                                 sublinear_tf=1, token_pattern='\\\\w+',\n",
+       "                                 use_idf=1)),\n",
+       "                ('logisticregression', LogisticRegression(C=1000))])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
    "source": [
     "from sklearn.metrics import accuracy_score, classification_report, f1_score\n",
     "newsgroups_test = fetch_20newsgroups(subset='test')\n",
@@ -51,83 +87,173 @@
     "\n",
     "print('ACCURACY :', accuracy_score(y_pred, y_test))\n",
     "print('F1       :', f1_score(y_pred, y_test, average='macro'))"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "ACCURACY : 0.8619224641529474\n",
+      "F1       : 0.8571851807862799\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
    "source": [
     "def predict(text):\n",
     "    idx = pipeline.predict([text])[0]\n",
     "    return targets[idx]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
    "source": [
     "predict('Windows is an operating system')"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'comp.os.ms-windows.misc'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
    "source": [
     "predict('I sell my soul')"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'misc.forsale'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
    "source": [
     "predict('Which is the fastest car?')"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'rec.autos'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
    "source": [
     "predict('Which is the fastest bike?')"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'rec.motorcycles'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 11,
    "source": [
-    "from sklearn.externals import joblib\n",
+    "#from sklearn.externals import joblib\n",
+    "#from joblib import dump, load\n",
+    "import joblib\n",
     "!rm -rf models\n",
     "!mkdir models/\n",
-    "joblib.dump(pipeline, 'models/pipeline.pickle')\n",
-    "joblib.dump(targets, 'models/targets.pickle')"
-   ]
+    "joblib.dump(pipeline, 'models/pipeline.pkl')\n",
+    "joblib.dump(targets, 'models/targets.pkl')"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['models/targets.pkl']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "source": [
+    "joblib.load('models/pipeline.pkl')"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('tfidfvectorizer',\n",
+       "                 TfidfVectorizer(min_df=3, ngram_range=(1, 2), smooth_idf=1,\n",
+       "                                 stop_words='english', strip_accents='unicode',\n",
+       "                                 sublinear_tf=1, token_pattern='\\\\w+',\n",
+       "                                 use_idf=1)),\n",
+       "                ('logisticregression', LogisticRegression(C=1000))])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": [
-    "joblib.load('models/pipeline.pickle')"
-   ]
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.11 64-bit ('AI_ML_38_GPU': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -139,7 +265,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.11"
+  },
+  "interpreter": {
+   "hash": "10d220c55dad87bc296f91a276cffc08c658df4f112171a2982baf6251a25e4e"
   }
  },
  "nbformat": 4,
