update with fixes

--- a/train.ipynb
+++ b/train.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "source": [
     "#from sklearn.externals import joblib\n",
     "#from joblib import dump, load\n",
@@ -208,11 +208,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['models/targets.pkl']"
+       "['models/targets.pkl1']"
       ]
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 23
     }
    ],
    "metadata": {}
